# AgentTracks

./: .env.example  .gitignore  CLAUDE.md  COMPONENT_DOCS.md  README.md  main.py  pyproject.toml
agent-app/: pyproject.toml
agentscope/: 01_react_agent.py
agentscope_learning/: 01_react_agent.py
agentscope_learning/02_meta_planner_agent/: AGENT_GUIDE.md  README.md  _meta_planner.py  config.py  env.example  main.py  meta_planner.py
agentscope_learning/02_meta_planner_agent/_planning_tools/: __init__.py  _planning_notebook.py  _roadmap_manager.py  _worker_manager.py  prompt.py  流程图.md
agentscope_learning/02_meta_planner_agent/planning_tools/: __init__.py  logfire_utils.py  planning_notebook.py  prompt.py  (+2 more)
agno/: 0.0_demo.py  0.1_research_agent.py  0.2_teams.py
agno/agentic_rag/: app.py
chainlit_learning/: chainlit_demo.py
langgraph/llamabot/: app.py
langgraph_learning/llamabot_learning/: run_tests.py
openai_agents_sdk/: 01_hello_chatbot.py  02_first_agent.py
pocketflow/simple_rag/: main.py
pocketflow_learning/simple_rag/: flow.py  nodes.py  utils.py
pydantic_ai/: 01.1_agent_run.py  01.2_agent_streaming.py  01.3_conversation.py  01.4_system_prompts.py  01.5_dependencies.py  01.6_format_output.py  01.7_type_mistakes.py  01_agent_demo.py  01_demo.py  02.1_ddgo_seach.py  02.1_seach.py  02.1_search.py  02.2_stream_data_val.py  02.3_dynamic_tools.py  02.4_multi_agent.py  02_tools.py  02_tools_decorator.py  02_tools_demo.py  02_tools_func.py  weather_agent.py
pydantic_ai/chat_app/: .chat_app_messages.sqlite  chat_app.html  chat_app.py
pydantic_ai/examples/: bank_support.py  flight_booking.py  weather_agent.py
pydantic_ai_learning/: 01.1_agent_run.py  01.3_conversation.py  01.4_system_prompts.py  01.5_dependencies.py  01_agent_demo.py  02.4_multi_agent.py  02_tools_func.py  02_tools_shema.py
pydantic_ai_learning/chat_app/: .chat_app_messages.sqlite  chat_app.html
pydantic_ai_learning/examples/: bank_support.py  flight_booking.py
utils/: logfire_utils.py
(+31 files in other folders)
