[project]
name = "agenttracks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.4.301",
    "devtools>=0.12.2",
    "fastapi[all]>=0.115.12",
    "logfire[fastapi,sqlite3,sqllite3]>=3.10.0",
    "openai-agents>=0.0.6",
    "pydantic-ai>=0.0.43",
    "pydantic-ai-slim[duckduckgo,logfire,openai,tavily]>=0.0.46",
]
