[project]
name = "agenttracks"
version = "0.1.0"
description = "AI Agent框架学习项目 - 通过实际示例学习和比较主流AI Agent框架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.2.7",
    "beautifulsoup4>=4.13.3",
    "chainlit>=2.4.301",
    "chromadb>=1.0.13",
    "devtools>=0.12.2",
    "exa-py>=1.10.0",
    "fastapi[all]>=0.115.12",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchainhub>=0.1.21",
    "langgraph>=0.5.0",
    "langgraph-checkpoint-postgres>=2.0.21",
    "logfire[fastapi,sqlite3,sqllite3]>=3.10.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.6",
    "pgvector>=0.4.0",
    "pocketflow>=0.0.2",
    "psycopg>=3.2.6",
    "psycopg-pool>=3.2.6",
    "pydantic-ai>=0.0.43",
    "pydantic-ai-slim[duckduckgo,logfire,openai,tavily]>=0.0.46",
    "pypdf>=5.4.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
]
